# telegrafono

./: README.md  pyproject.toml
src/telegrafono/: cli.py  config.py  llm.py  telebot.py
